# wormneuroatlas

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yaml
scripts/: cell_lineage_asymmetry.py  cengen_conversion_adapt_boolean_matrices.py  cengen_conversion_from_R.R  gene_expression.py  get_gene_expression.py  make_neuropeptidergic_connectome.py  pep_connectome_extract_combos.py  plot_signal_propagation.py  signalpropagation_kernels.py  test_deorphanization.py
scripts/build_datasets/: anatomical_connectome_make_h5.py  cengen_conversion_adapt_boolean_matrices.py  cengen_conversion_from_R.R  cengen_conversion_from_R_bulk.R  cengen_make_h5_from_csv.py
scripts/tests/: test_deorphanization.py  test_pep_pairs.txt
wormneuroatlas/: CellLineage.py  Cengen.py  ExponentialConvolution_min.py  GenesExpressing-daf-2-thrs2.csv  GenesExpressing-unc-7-unc-9-inx-_-eat-5-thrs2.csv  NeuroAtlas.py  PeptideGPCR.py  SynapseSign.py  WormBase.py  __init__.py  aconnectome.json  aconnectome_ids.txt  aconnectome_witvliet_2020_7.csv  esconnectome_monoamines_Bentley_2016.csv  esconnectome_neuropeptides_Bentley_2016.csv
wormneuroatlas/data/: .~lock.deorphanization_media_6.csv#  GenesExpressing-neuropeptide-receptors.csv  GenesExpressing-neuropeptides.csv  GenesExpressing-npr-11-thrs2.csv  GenesExpressing-npr-4-thrs2.csv  GenesExpressing-pdfr-1-thrs2.csv  aconnectome_default.h5  aconnectome_ids_ganglia.json  aconnectome_witvliet_2020_8.csv  anatlas_neuron_positions.txt  c_elegans.PRJNA13758.WS286.geneIDs.txt  cached_seq_ids.txt  cell_lineage.txt  deorphanization_media_6.csv  esconnectome_neuropeptides_Bentley_2016.csv  froonikcx_peptide_gpcr.txt  journal.pcbi.1007974.s003.xlsx  neuron_ids.txt  sensoryintermotor_ids.json
