[metadata]
name = wormneuroatlas
version = 0.0.1
author = Francesco Randi
author_email = francesco.randi@gmail.com
description = A Python package combining multimodal C. elegans’ neural datasets
long_description = A Python package combining multimodal C. elegans’ neural datasets
url = https://github.com/francescorandi/wormneuroatlas
keywords = neuroscience, transcriptome, genome, signal propagation
python_requires = >=3.7
license = GPL-3
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    numpy
    matplotlib
    pycurl
    certifi
    h5py
    pdoc

[options.package_data]
wormneuroatlas = 
    data/*
