[metadata]
name = wormneuroatlas
author = Francesco Randi
author_email = francesco.randi@gmail.com
description = A Python package combining multimodal C. elegans’ neural datasets
long_description = A Python package combining multimodal C. elegans’ neural datasets
url = https://github.com/francescorandi/wormneuroatlas
python_requires = >=3.7
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = wormneuroatlas, wormneuroatlas.data
install_requires =
    numpy
    matplotlib
    urllib3
    h5py
    pdoc
    pandas
    openpyxl

[options.package_data]
wormneuroatlas = 
    data/*
